fixed overlap issue in sitemap

--- a/src/sass/components/childnav.scss
+++ b/src/sass/components/childnav.scss
@@ -137,10 +137,17 @@
 	}
 }
 
+
 .navigation--level-4 {
 	left: 15px;
-	position: absolute;
 }
+
+.childnav__list {
+	&.navigation--level-4 {
+		position: absolute;
+	}
+}
+
 
 .childnav__list {
 	.js .childnav .childnav__container > & {
